--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
     </div>
     <button type="button">提交</button>
 </form>
-    <img src="C:\Users\chengdu\Pictures\清泽.jpg.png" />
+    <img src="清泽.jpg.png" />
 </body>
 </html>
