--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </div>
     <div>
         <lable>电话</lable>
-        <input type="text" plaveholder="请输入电话"
+        <input type="tel" plaveholder="请输入电话"
     </div>
     <div>
         <lable>邮箱</lable>
-        <input type="text" plaehoulder="请输入邮箱"
+        <input type="tel" plaehoulder="请输入邮箱"
     </div>
 <form>
     <lable>部门：</lable>
