--- a/index.html
+++ b/index.html
@@ -22,24 +22,19 @@
     <h1><span>清泽family等着你的加入</span></h1>
     <h2>清兮汾水，惠泽三晋</h2>
     <div>
-        <lable>姓名</lable>
-        <input type="text" placeholder="请输入姓名">
-        
+        <p>姓名<input type="text" placeholder="请输入姓名"></p>
     </div>
     <div>
-        <lable>专业名称</lable>
-        <input type="text" placeholder="请输入专业"
+        <p>专业<input type="text" placeholder="请输入专业"</p>
     </div>
     <div>
-        <lable>电话</lable>
-        <input type="tel" plaveholder="请输入电话"
+        <p>电话<input type="tel" plaveholder="请输入电话"</p>
     </div>
     <div>
-        <lable>邮箱</lable>
-        <input type="tel" plaehoulder="请输入邮箱"
+        <p>邮箱<input type="tel" plaehoulder="请输入邮箱"</p>
     </div>
 <form>
-    <lable>部门：</lable>
+    <p>部门：</p>
     <select>
         <option value="综合办公室">综合办公室</option>
         <option value="公关策划部">公关策划部</option>
@@ -56,11 +51,11 @@
         <label>性别</label>
     </div>
     <div>
-        <label>男</label>
+        <p>男</p>
         <input type="radio" value="1" name="gender" />
     </div>
     <div>
-        <label>女</label>
+        <p>女</p>
         <input type="radio" value="2" name="gender" />
     </div>
     <button type="button">提交</button>
