--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <p>邮箱<input type="tel" plaehoulder="请输入邮箱"</p>
     </div>
 <form>
-    <p>部门：</p>
-    <select>
+    <p>部门：<select>
         <option value="综合办公室">综合办公室</option>
         <option value="公关策划部">公关策划部</option>
         <option value="网络安全部">网络安全部</option>
@@ -47,6 +46,7 @@
         <option value="微影像">微影像</option>
         <option value="电视台">电视台</option>
     </select>
+    </p>
     <div>
         <label>性别</label>
     </div>
