--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <p>邮箱<input type="tel" plaehoulder="请输入邮箱"</p>
     </div>
 <form>
-    <p>部门：<select>
+    <lable>部门：</lable>
+    <select>
         <option value="综合办公室">综合办公室</option>
         <option value="公关策划部">公关策划部</option>
         <option value="网络安全部">网络安全部</option>
@@ -46,17 +47,15 @@
         <option value="微影像">微影像</option>
         <option value="电视台">电视台</option>
     </select>
-    </p>
     <div>
         <label>性别</label>
     </div>
     <div>
-        <p>男</p>
+        <lable>男</lable>
         <input type="radio" value="1" name="gender" />
     </div>
     <div>
-        <p>女</p>
-        <input type="radio" value="2" name="gender" />
+        <p>女<input type="radio" value="2" name="gender" /></p>
     </div>
     <button type="button">提交</button>
 </form>
