--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <input type="radio" value="1" name="gender" />
     </div>
     <div>
-        <p>女<input type="radio" value="2" name="gender" /></p>
+        <lable>女</lable>
+        <input type="radio" value="2" name="gender" />
     </div>
     <button type="button">提交</button>
 </form>
