--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 <form>
     <lable>部门：</lable>
     <select>
-        <option value="综合办公室">综合办公室</option>
-        <option value="公关策划部">公关策划部</option>
-        <option value="网络安全部">网络安全部</option>
-        <option value="视觉设计部">视觉设计部</option>
-        <option value="技术开发部">技术开发部</option>
-        <option value="综合媒体集团">综合媒体集团</option>
-        <option value="新闻集团">新闻集团</option>
-        <option value="微效坊">微效坊</option>
-        <option value="微影像">微影像</option>
-        <option value="电视台">电视台</option>
+        <option value="General office">综合办公室</option>
+        <option value="Public relations planning department">公关策划部</option>
+        <option value="Cyber security">网络安全部</option>
+        <option value="Visual design department">视觉设计部</option>
+        <option value="Technical development department">技术开发部</option>
+        <option value="Integrated media group">综合媒体集团</option>
+        <option value="News corp">新闻集团</option>
+        <option value="Marginal effects fang">微效坊</option>
+        <option value="Micro image">微影像</option>
+        <option value="Television">电视台</option>
     </select>
     <div>
         <label>性别</label>
