--- a/index.html
+++ b/index.html
@@ -49,13 +49,9 @@
         </select>
     </p>
     <div>
-        <label>性别</label>
-    </div>
-    <div>
+        <lable>性别</label>
         <lable>男</lable>
         <input type="radio" value="1" name="gender" />
-    </div>
-    <div>
         <lable>女</lable>
         <input type="radio" value="2" name="gender" />
     </div>
