--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </p>
     <div>
         性别
-        男
+        <label for="male">男</label>
         <input type="radio" value="1" name="gender" />
-        女
+        <label for="female">女</label>
         <input type="radio" value="2" name="gender" />
     </div>
     <button type="button">提交</button>
