--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </p>
     <div>
         性别
-        <label for="male">男</label>
-        <input type="radio" value="1" name="gender" />
-        <label for="female">女</label>
-        <input type="radio" value="2" name="gender" />
+         <label for="male">男</label>
+         <input type="radio" name="gender" id="male" />
+         <label for="female">女</label>
+         <input type="radio" name="gender" id="female" />
     </div>
     <button type="button">提交</button>
 </form>
