--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <p>专业<input type="text" placeholder="请输入专业"</p>
     </div>
     <div>
-        <p>电话<input type="tel" plaveholder="请输入电话"</p>
+        <p>电话<input type="tel" placeholder="请输入电话"</p>
     </div>
     <div>
-        <p>邮箱<input type="tel" plaehoulder="请输入邮箱"</p>
+        <p>邮箱<input type="tel" placeholder="请输入邮箱"</p>
     </div>
 <form>
     <p>部门：
